# fastapi-madr

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
madr/: app.py  models.py  schemas.py  security.py  utils.py
madr/routers/: auth.py  contas.py  livro.py  romancista.py  user.py
migrations/: env.py
migrations/versions/: 1f7f57f6f110_create_tables_user_romancista_livro.py  7b1d9d83a96d_create_contas_table.py  c90112871406_create_tables_user_romancista_livro.py  ff3dbc8d8e03_create_romancista_and_livros_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_conta.py  test_db.py  test_livro.py  test_romancista.py  test_security.py
